<?xml version="1.0"?>
<package format="2">
  <name>realtime_hrsi_situation_classifier</name>
  <version>0.0.1</version>
  <description>
  TODO
  </description>

  <maintainer email="laurencejbelliott@gmail.com">Laurence Roberts-Elliott</maintainer>
  <license>BSD</license>

  <author email="laurencejbelliott@gmail.com">Laurence Roberts-Elliott</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
    
    
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
